--- a/core/templates/protein.html
+++ b/core/templates/protein.html
@@ -103,7 +103,7 @@
 				<th>Phenotype</th>
 				<th>GPCR</th>
 				<th>Ligand</th>
-				<th>Affinity</th>
+				<th>Affinity (pEC<sub>50</sub>)</th>
 				<th>Type</th>
 				<th>Sources</th>
 			</tr>
@@ -162,7 +162,7 @@
 					<th>Phenotype</th>
 					<th>RAMP</th>
 					<th>Ligand</th>
-					<th>Affinity</th>
+				    <th>Affinity (pEC<sub>50</sub>)</th>
 					<th>Type</th>
 					<th>Sources</th>
 				</tr>
